part-1/exercise-1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reader-writer-svc
spec:
  type: ClusterIP
  selector:
    app: reader-writer
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
